<resources>
    <string name="notice_1">【点击本提示切换为简易教程】\n
        软件开发者：赵怡然\n
        群号: 323956301 978563358 1006272130\n
        官方网站： trpgbot.com \n
        软件开发者QQ: 484546762\n
        保留所有解释权。</string>
    <string name="notice_2">使用方案【再点击则隐藏】：\n
        1.点击骰娘账号管理\n
        2.输入骰娘账号并登陆\n
        3.完成登陆验证。\n
        4.重启本软件，[状态检测]为浅蓝色即可正常使用</string>
    <string name="app_name">DICE X2!</string>
    <string name="switch_openDice">打开COC骰子</string>
    <string name="switch_publicMode">公骰模式</string>
    <string name="switch_handleMySelf">响应自己的指令</string>
    <string name="switch_keyAutoReply">关键词自动回复</string>
    <string name="switch_bootStart">开机自启动</string>
    <string name="forceStopUnsafeLogin">卡在验证成功“前往登录QQ”，点我</string>
    <string name="customConfig">自定义配置</string>
    <string name="switch_wayToReply">引用原用户内容</string>
    <string name="consoleEnter">查看控制台</string>
    <string name="changeQQ">切换骰娘QQ</string>
    <string name="saveData">保存</string>
    <string name="startMirai">启动Mirai</string>
    <string name="autoLogin">骰娘账号管理</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="autoLoginDescription">自动登陆设置,请输入账号信息,格式为\n
    QQ号1 QQ密码\n
    QQ号2 QQ密码</string>
    <string name="title_activity_login">Dice! 骰娘登陆系统</string>
    <string name="prompt_qq">qq</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">欢迎使用Android ZhaoDice on Mirai,请遵守骰娘协议</string>
    <string name="action_sign_in">骰娘登陆</string>
    <string name="invalid_username">请输入有效QQ账号</string>
    <string name="invalid_password">请输入有效QQ密码</string>
    <string name="login_failed">登陆失败\n
        1.使用其他登陆方式（WATCH，PHONE，PAD等）\n
        2.开启设备锁\n
        3.账号等级超过6级\n
        4.切换流量/wifi\n
        5.更改密码</string>
    <string name="has_not_already">
        登陆失败，Mirai服务尚未启动\n
        可能正在检查更新，请多等30秒至2分钟再点登录试试
    </string>
    <string name="password_over_16">密码长度不得超过16位</string>
    <string name="deleteAccounts">骰娘账号管理</string>
    <string name="reboot">重启APP</string>
    <string name="mutiAccount">发现重复账号！右下角删除已登陆账号后再试</string>
    <string name="currentUin">当前操作账号：</string>
    <string name="lockRoll">点击禁止滚动</string>
    <string name="slidNotice">滑块验证码应在上方图案内滑动，不要滑动到空白区域！否则会很不丝滑。</string>
    <string name="watch">WATCH</string>
    <string name="pad">ANDROID PAD</string>
    <string name="android_phone">ANDROID PHONE</string>
    <string name="keeplive">使APP在后台可以活得更久</string>
    <string name="loginprocessprint">LoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
        LoginProcessPrintLoginProcessPrintLoginProcessPrintLoginProcessPrint\n
    </string>
</resources>